<resources>
	<string name="app_name">Audio Recorder</string>
	<string name="records">Records</string>
	<string name="settings">Settings</string>
	<string name="setup">Setup</string>
	<string name="welcome_1">Welcome to a simple and fast application</string>
    <string name="rate_app">Rate app</string>
	<string name="store_records_public">Store records in a public dir</string>
	<string name="record_in_stereo">Record in Stereo</string>
	<string name="dynamic_theme_colors">Dynamic theme colors</string>
	<string name="dark_theme">Dark theme</string>
	<string name="record_name_format">Record name format</string>
	<string name="version">Version %s</string>
	<plurals name="years">
		<item quantity="one">year</item>
		<item quantity="other">years</item>
	</plurals>
	<plurals name="days">
		<item quantity="one">day</item>
		<item quantity="other">days</item>
	</plurals>
	<string name="msg_recording_permanently_deleted">Recording \'%1$s\' permanently deleted</string>
	<string name="msg_recording_moved_to_trash">Recording \'%1$s\' moved to Trash</string>
	<string name="msg_few_recordings_moved_to_trash">%1$d of %2$d recordings moved to Trash</string>
	<string name="msg_move_to_trash_failed">Failed to move recording to Trash</string>
	<string name="msg_multiple_move_to_trash_failed">Failed to move recordings to Trash.</string>
	<string name="msg_recording_canceled">Canceled recording moved to Trash</string>
	<string name="msg_recording_restored">Recording \'%1$s\' restored</string>
	<string name="msg_record_renamed">Record renamed to \'%1$s\'</string>
	<string name="msg_recording_saved_with_name">Recording saved with name: %s</string>
	<string name="msg_save_recording_failed">Failed to save recording.</string>
    <string name="msg_not_enough_storage_space">Not enough storage space. Free up some space and try again.</string>
	<string name="msg_file_operation_failed">File operation failed. Please try again</string>
	<string name="msg_name_cannot_be_empty">Name cannot be empty</string>
    <string name="msg_permission_microphone_denied">Microphone permission is required to record audio. Please grant the permission to use this feature.</string>
	<string name="action_undo">UNDO</string>
	<string name="msg_operation_failed_generic">Operation failed</string>
    <string name="recording_duration">Recording Duration</string>
    <string name="recording_duration_subtitle">Automatically start a new recording file when this limit is reached</string>
    <string name="new_recording_part_started">New recording part started</string>
    <string name="duration_picker_hint">Enter hours and minutes</string>
    <string name="error_duration_at_least_one_minute">Duration must be at least 1 minute</string>
    <string name="warning_duration_limit_recommended">Recordings longer than 2 hours are not recommended as you may lose all recorded progress if an error occurs</string>
    <string name="keep_screen_on">Keep screen ON while recording</string>
    <string name="records_author_name">Records author name</string>
    <string name="record_author">Record author</string>
    <string name="records_author_name_hint">Author name</string>
	<string name="info_record_author_name">Sets the artist/author tag embedded in the metadata of each new recording file. This name will appear in music players and file managers.</string>
	<string name="recording_location">Storage location</string>
	<string name="recording_location_app_storage">App storage (private)</string>
	<string name="recording_location_reset">Use app storage</string>
	<string name="error_public_dir_unavailable">Selected folder is unavailable. Recording is saved to app storage.</string>
	<string name="error_public_dir_unavailable_import">Selected folder is unavailable. File is imported to app storage.</string>
	<string name="msg_record_already_in_public_dir">The recording is already stored in a public folder</string>
	<string name="total_duration">Total recorded duration: %s</string>
	<string name="total_record_count">Total records count: %d</string>
	<string name="available_space">Available space: %s</string>
    <string name="delete_all2">Delete all</string>
    <string name="delete_all3">Empty trash</string>
	<string name="records_were_removed">Some records files were not found in the records directory. Possibly they were removed or moved.</string>
	<string name="title_file_is_not_available">No access to the record file!</string>
	<string name="details_file_is_not_available">Unfortunately, the app no longer has access to the Android public storage.\nYou can find the record file on your smartphone at this location:\n%s</string>
	<string name="warning">Warning!</string>
    <string name="move_record_to_trash">Move to trash %s?</string>
    <string name="delete_record">Delete the record %s?</string>
    <string name="delete_record_forever">Delete record %s forever?</string>
	<plurals name="delete_selected_records">
		<item quantity="one">Move to trash %d selected record?</item>
		<item quantity="other">Move to trash %d selected records?</item>
	</plurals>
	<plurals name="download_selected_records">
		<item quantity="one">Copy %d selected record to the \'Downloads\' directory?</item>
		<item quantity="other">Copy %d selected records to the \'Downloads\' directory?</item>
	</plurals>
	<string name="start_recording">Start recording</string>
	<string name="recording_feature_disabled">Recording feature disabled</string>
	<string name="restore_record">Restore record %s?</string>
	<string name="delete_all_records">Delete all records?</string>
	<string name="delete_all_records2">Empty trash? All recordings will be permanently deleted.</string>
	<string name="all_records_deleted">All records deleted successfully</string>
	<string name="failed_to_delete_all_records">Failed to delete all records</string>
	<string name="please_select_record_to_share">Please select a record to share</string>
    <string name="update_record_name">Update name</string>
    <string name="update_name_and_description">Update name and description</string>
	<string name="recording">Recording: %s</string>
	<string name="recording_is_on">Recording is ON</string>
	<string name="recording_progress">Recording&#8230;</string>
	<string name="recording_paused">Paused</string>
	<string name="playback">Playback: %s</string>
	<string name="empty">Empty</string>
	<string name="items_selected"> %d selected</string>
	<string name="no_records">Records is empty</string>
	<string name="no_bookmarks">Bookmarks is empty</string>
	<string name="bookmarks">Bookmarks</string>
	<string name="share_record">Share record: %s</string>
	<plurals name="share_records_count">
		<item quantity="one">Share %d record</item>
		<item quantity="other">Share %d records</item>
	</plurals>
	<string name="import_progress">Audio file import&#8230;</string>
	<string name="btn_import">Import</string>
	<string name="processing_canceled">Processing is canceled</string>
	<string name="record_processing">Processing audio&#8230;</string>
	<string name="request">Request or feedback</string>
	<string name="email_clients_not_found">Not found any Email client</string>
	<string name="send_email">Send by email&#8230;</string>
	<string name="open_record_with">Open %s with</string>
	<string name="delete">Delete</string>
	<string name="restore">Restore</string>
	<string name="info">Information</string>
	<string name="rename">Rename</string>
	<string name="dont_ask_again">Don\'t ask again</string>
	<string name="dont_show_next_time">Don\'t show next time</string>
	<string name="open_with">Open with&#8230;</string>
	<string name="save_as">Save as&#8230;</string>
	<string name="downloading">Downloading: %s</string>
	<plurals name="downloading_success_count">
		<item quantity="one">%d record copied successfully</item>
		<item quantity="other">%d records copied successfully</item>
	</plurals>
	<plurals name="move_records_success_count">
		<item quantity="one">%d record moved successfully</item>
		<item quantity="other">%d records moved successfully</item>
	</plurals>
	<string name="downloading_success_and_fail_count">%1$d records copied successfully and %2$d failed to copy</string>
	<string name="moving_records_success_and_fail_count">%1$d records moved successfully and %2$d failed to move</string>
	<string name="downloading_success">%s copied to the \'Downloads\' directory</string>
	<string name="move_record_success">%s moved to the app\'s private directory</string>
	<plurals name="downloading_failed_count">
		<item quantity="one">Failed to copy %d record</item>
		<item quantity="other">Failed to copy %d records</item>
	</plurals>
	<plurals name="move_records_failed_count">
		<item quantity="one">Failed to move %d record</item>
		<item quantity="other">Failed to move %d records</item>
	</plurals>
	<string name="record_will_be_copied_into_downloads">The record will be copied to the \'Downloads\' directory</string>
	<string name="record_name_will_be_copied_into_downloads">The record \'%s\' will be copied to the \'Downloads\' directory</string>
	<string name="move_record_failed">Failed to move: %s</string>
	<string name="downloading_failed">Failed to copy: %s</string>
	<string name="downloading_failed_file_already_exists">Failed to copy. File with name %s already exists</string>
	<string name="downloading_cancel">Copy canceled</string>
	<string name="share">Share</string>
	<string name="ask_to_rename">Show rename dialog after recording is completed</string>
	<string name="record_moved_into_trash">The record moved to trash</string>
	<string name="selected_records_moved_into_trash">Selected records moved to trash</string>
	<string name="all_records_deleted_successfully">All records deleted successfully</string>
	<string name="record_deleted_successfully">The record deleted successfully</string>
	<string name="record_restored_successfully">The record restored successfully</string>
	<string name="record_imported_successfully">The record imported successfully</string>
	<string name="cant_import_files">Can\'t import files</string>
	<string name="by_date">By date (newest)</string>
	<string name="by_date_desc">By date (oldest)</string>
	<string name="by_name">By name (A-Z)</string>
	<string name="by_name_desc">By name (Z-A)</string>
	<string name="by_duration">By duration (longest)</string>
	<string name="by_duration_desc">By duration (shortest)</string>
	<string name="filter">Filter</string>
	<string name="clear">Clear</string>
	<string name="filter_dismiss">Dismiss filter</string>
	<string name="filter_no_options">No records to filter</string>
	<string name="search">Search</string>
	<string name="search_records_hint">Search records</string>
	<string name="search_close">Close search</string>
	<string name="search_clear">Clear search</string>
	<string name="no_search_results">No records found for “%1$s”</string>
	<string name="need_write_permission">The app requires permission to access to the public storage. If not allowed, records will be stored in the app’s private directory</string>
	<string name="rec_name">Name:</string>
	<string name="rec_format">Format:</string>
	<string name="rec_duration">Duration:</string>
    <string name="rec_size">Size:</string>
	<string name="rec_created">Created:</string>
	<string name="rec_location">File location:</string>
	<string name="rec_description">Description</string>
	<string name="trash">Trash</string>
	<string name="trash_info">Recordings in the trash are permanently deleted after 60 days.</string>
	<string name="file_browser">File browser</string>
	<string name="private_dir">Private directory</string>
	<string name="public_dir">Public directory</string>
	<string name="btn_ok">Ok</string>
    <string name="btn_details">Details</string>
	<string name="bitrate">Bitrate:</string>
	<string-array name="channels">
		<item>Stereo</item>
		<item>Mono</item>
	</string-array>
	<string name="sample_rate">Sample rate:</string>
	<string name="error_lost_records">Some of your records were deleted or moved</string>
</resources>