<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context=".activities.PatientSelectionActivity">

	<item
			android:id="@+id/menu_share"
			android:icon="@drawable/ic_share"
			android:title="@string/share" />
	<item
			android:id="@+id/menu_info"
			android:icon="@drawable/ic_info"
			android:title="@string/info" />
	<item
			android:id="@+id/menu_rename"
			android:icon="@drawable/ic_pencil"
			android:title="@string/rename" />
	<item
			android:id="@+id/menu_open_with"
			android:icon="@drawable/ic_open_with"
			android:title="@string/open_with" />
	<item
			android:id="@+id/menu_download"
			android:icon="@drawable/ic_save_alt"
			android:title="@string/download" />
	<item
			android:id="@+id/menu_delete"
			android:icon="@drawable/ic_delete_forever"
			android:title="@string/delete" />

</menu>
