<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content">

		<LinearLayout
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageButton
					android:id="@+id/btn_back"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:layout_gravity="start"
					android:background="?android:selectableItemBackgroundBorderless"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_arrow_back"/>

			<TextView
					style="@style/Text.SectionLabel"
					android:id="@+id/txt_title"
					android:layout_width="0dp"
					android:layout_height="@dimen/toolbar_height"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:paddingStart="@dimen/spacing_normal"
					android:paddingLeft="@dimen/spacing_normal"
					android:paddingEnd="@dimen/spacing_normal"
					android:paddingRight="@dimen/spacing_normal"
					android:textColor="@color/text_primary_light"
					android:text="@string/info"
					/>

		</LinearLayout>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_name"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				/>
		<TextView
				android:id="@+id/txt_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="Record-12"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_format"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				/>
		<TextView
				android:id="@+id/txt_format"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="Wav"/>

		<TextView
				android:id="@+id/lbl_bitrate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/bitrate"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal" />
		<TextView
				android:id="@+id/txt_bitrate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="192"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/channels"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal" />
		<TextView
				android:id="@+id/txt_channels_count"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="2"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/sample_rate"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal" />
		<TextView
				android:id="@+id/txt_sample_rate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="44100"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_duration"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				/>
		<TextView
				android:id="@+id/txt_duration"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="12:23"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_size"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				/>
		<TextView
				android:id="@+id/txt_size"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="12.23Mb"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_location"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal" />
		<TextView
				android:id="@+id/txt_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="/emulater/0/sotrage/downloads/Record-12.wav"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/rec_created"
				android:textStyle="normal"
				android:fontFamily="sans-serif-light"
				android:textSize="@dimen/text_medium"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal" />
		<TextView
				android:id="@+id/txt_created"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:layout_marginBottom="@dimen/spacing_normal"
				android:textSize="@dimen/text_large"
				tools:text="22.11.2018, 11:30"/>

	</LinearLayout>
</ScrollView>
