<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one or more contributor
  ~  license agreements. See the NOTICE file distributed with this work for
  ~  additional ic_information regarding copyright ownership. The ASF licenses this
  ~  file to you under the Apache License, Version 2.0 (the "License"); you may not
  ~  use this file except in compliance with the License. You may obtain a copy of
  ~  the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~  License for the specific language governing permissions and limitations under
  ~  the License.
  -->
<!--style="@style/Widget.Dialog"-->
<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/white"
		android:paddingStart="@dimen/spacing_double"
		android:paddingEnd="@dimen/spacing_double"
		android:paddingTop="@dimen/spacing_double"
		android:paddingBottom="@dimen/spacing_xnormal"
		xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
			android:id="@+id/dialog_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:textColor="@color/md_black_1000"
			android:text="@string/warning"
			android:textAppearance="@style/TextAppearance.DialogTitle" />

	<TextView
			android:id="@+id/dialog_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:layout_marginTop="@dimen/spacing_normal"
			android:textSize="@dimen/text_xmedium"
			android:textColor="@color/md_black_1000"
			android:text="@string/error_lost_records"
			android:textAppearance="@style/TextAppearance.DialogContent" />

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:layout_gravity="end"
			android:layout_marginTop="@dimen/spacing_normal"
			android:orientation="horizontal">

		<Button
				style="@style/Widget.BorderlessButton"
				android:id="@+id/dialog_ok_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_normal"
				android:paddingStart="@dimen/spacing_normal"
				android:paddingEnd="@dimen/spacing_normal"
				android:paddingLeft="@dimen/spacing_normal"
				android:paddingRight="@dimen/spacing_normal"
				android:text="@string/btn_ok" />

		<Button
				style="@style/Widget.RaisedButton"
				android:id="@+id/dialog_details_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_normal"
				android:paddingStart="@dimen/spacing_normal"
				android:paddingEnd="@dimen/spacing_normal"
				android:paddingLeft="@dimen/spacing_normal"
				android:paddingRight="@dimen/spacing_normal"
				android:layout_marginStart="@dimen/spacing_small"
				android:text="@string/btn_details" />

	</LinearLayout>
</LinearLayout>
